--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   http: ^1.3.0
   font_awesome_flutter: ^10.1.0
   shared_preferences: ^2.5.3
+  flutter_staggered_animations: ^1.1.1
+  image_picker: ^1.1.2
+
+
 
 
 dev_dependencies:
