--- a/.gitignore
+++ b/.gitignore
@@ -9,27 +9,51 @@
 .history
 .svn/
 migrate_working_dir/
+*.tmp
+*.bak
+*.lock
 
-# IntelliJ related
+# IDEs
+.idea/
 *.iml
 *.ipr
 *.iws
-.idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
+# VS Code
+.vscode/
 
 # Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
 .dart_tool/
+.packages
+.pub/
+build/
 .flutter-plugins
 .flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+.metadata
+pubspec.lock
+
+# Android
+android/.gradle/
+android/.idea/
+android/captures/
+android/gradle/
+android/app/debug
+android/app/profile
+android/app/release
+
+# iOS
+ios/.generated/
+ios/Flutter/Flutter.framework
+ios/Flutter/Flutter.podspec
+ios/Flutter/App.framework
+ios/Flutter/Generated.xcconfig
+ios/Pods/
+ios/Runner.xcworkspace
+ios/DerivedData/
+
+# Firebase/Secrets
+*.env
+*.firebase
 
 # Symbolication related
 app.*.symbols
@@ -37,7 +61,11 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# Web
+web/generated_plugin_registrant.dart
+
+# MacOS
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Pods/
+macos/Runner.xcworkspace
+macos/.generated/
