--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_staggered_animations: ^1.1.1
   image_picker: ^1.1.2
+  carousel_slider: ^5.1.1
 
 
 
